@@ -19,7 +19,7 @@
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">	
 
-	<org.zirco.ui.components.ZircoWebView android:id="@+id/webview" android:layout_width="fill_parent"
+	<org.zirco.ui.components.CustomWebView android:id="@+id/webview" android:layout_width="fill_parent"
 		android:layout_height="fill_parent" />
 		
 </RelativeLayout>
